dark mode fixed

--- a/FRONT/src/components/UserBookmarks/user-bookmarks.scss
+++ b/FRONT/src/components/UserBookmarks/user-bookmarks.scss
@@ -52,6 +52,17 @@
       margin: -.5rem;
       z-index: auto;
 
+      &--dark{
+        cursor: pointer;
+        background-color: vars.$light-color;
+        color: vars.$text-color;
+        border-radius: 10px 10px 0 0;
+        border-bottom: solid 1px vars.$primary-color;
+        padding: .5rem 1.5rem;
+        margin: -.5rem;
+        z-index: auto;  
+      }
+
       &--active {
         cursor: pointer;
         background-color: vars.$white-color;
@@ -66,7 +77,7 @@
         &--dark {
           cursor: pointer;
           background-color: vars.$dark-color;
-          color: vars.$text-color;
+          color: vars.$primary-color;
           border: solid 1px vars.$primary-color;
           border-bottom: none;
           border-radius: 10px 10px 0 0;
